--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							</button>
 						</div>
 					</div>
-				<div class="col-sm-6 col-md-8 board">
+				<div class="col-sm-6 col-md-8 board" id="onBoard">
 					<h3>Board</h3>
 					<p>This is a board.</p>
 					<h3 id="draw"></h3>
@@ -45,15 +45,15 @@
 				<div class="col-sm-3 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 class="title output">OUTPUT</h2></div>
 					<ul class="nav nav-sidebar">
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Speaker</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Movement</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Light</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Vibration</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Save Data</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> H A</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Waterpump</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Display</h4></li>
-						<li class="item output"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Heater</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Speaker</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Movement</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Light</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Vibration</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Save Data</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> H A</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Waterpump</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Display</h4></li>
+						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Heater</h4></li>
 					</ul>
 					<div class="mastfoot">
 						<div class="process">
