--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 					<div class="col-sm-3 col-md-2 sidebar">
 						<div class="input-sidebar"><h2 class="title input">INPUT</h2></div>
 						<ul class="nav nav-sidebar">
+						
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-232-sun.png"> Brightness</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-69-ruler.png"> Length</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-61-compass.png"> Compass</h4></li>
@@ -25,11 +26,9 @@
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-301-microphone.png"> Sound</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-55-clock.png"> Time</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-82-refresh.png"> Rotation</h4></li>
-							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-226-bluetooth.png"> Bluetooth</h4></li>
-							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-74-wifi.png"> Wi-Fi</h4></li>
-							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-12-camera.png"> Camera</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-91-eyedropper.png"> Color</h4></li>
-							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-234-direction.png"> Gyro</h4></li>
+							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-332-dashboard.png"> Acceleration</h4></li>
+							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-402-skateboard.png"> Slope</h4></li>
 						</ul>
 						<div class="process">
 							<button type="button" id="simulating" data-loading-text="Loading..." class="btn" autocomplete="off">
