--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	 		 <div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-3 col-md-2 sidebar">
-						<div class="input-sidebar"><h2 class="title input">INPUT</h2></div>
+						<div class="input-sidebar"><h2 class="title">INPUT</h2></div>
 						<ul class="nav nav-sidebar">
 						
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-232-sun.png"> Brightness</h4></li>
@@ -40,7 +40,7 @@
 					<h3 id="draw"></h3>
 				</div>
 				<div class="col-sm-3 col-md-2 sidebar">
-					<div class="output-sidebar"><h2 class="title output">OUTPUT</h2></div>
+					<div class="output-sidebar"><h2 class="title">OUTPUT</h2></div>
 					<ul class="nav nav-sidebar">
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Speaker</h4></li>
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Movement</h4></li>
