--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-402-skateboard.png"> Slope</h4></li>
 						</ul>
 						<div class="process">
-							<button type="button" id="simulating" data-loading-text="Loading..." class="btn" autocomplete="off">
+							<button type="button" id="simulating" data-loading-text="Loading..." class="btn">
 								<h2>Simulating</h2>
 							</button>
 						</div>
@@ -53,7 +53,7 @@
 						<li class="output item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-13-heart.png"> Heater</h4></li>
 					</ul>
 					<div class="process">
-						<button type="button" id="create" data-loading-text="Loading..." class="btn" autocomplete="off">
+						<button type="button" id="create" data-loading-text="Loading..." class="btn">
 							<h2>Create</h2>
 						</button>
 					</div>
