--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <!--
-88           ,ad8888ba,   88         88 8888       88    ,ad8888ba,  88888888888 
-88          d8"'    `"8b  88         88 88 88      88   d8"'    `"8b 88
-88         d8'        `8b 88         88 88  88     88  d8'           88
-88         88          88 88         88 88   88    88  88            8dev@Lounge
-88         88          88 88         88 88    88   88  88      88888 88"""""""""
-88         Y8,        ,8P Y8,        88 88     88  88  Y8,        88 88
-88          Y8a.    .a8P  Y8a.       88 88      88 88  Y8a.    .a88  88
-88888888888  `"Y8888Y"'    `"Y888888888 88       8888   `"Y88888P"   88888888888
+'88       88'
+  88     88            88 8888       88 88            88 88888888888 8888       88 88888888888   ,ad8888ba,   88888888ba,
+   88   88             88 88 88      88  88          88  88          88 88      88 """"888""""  d8"'    `"8b  88      `"8b
+    88.88              88 88  88     88   88        88   88          88  88     88     888     d8'        `8b 88       .8b
+     888    x-inventor 88 88   88    88    88      88    8dev@invent 88   88    88     888     88          88 888888888P'
+    88'88   """""""""" 88 88    88   88     88    88     88""""""""" 88    88   88     888     88          88 88     "8ba,
+   88   88             88 88     88  88      88  88      88          88     88  88     888     Y8,        ,8P 88       'Y8
+  88     88            88 88      88 88       8888       88          88      88 88     888      Y8a.    .a8P  88        8a
+.88       88.          88 88       8888`       88        88888888888 88       8888     888       '"Y8888Y"'   88        Y8
      Copyright © 2015 Lounge. All rights reserved.                           -->
 <html>
 	<head>
