--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						</div>
 					</div>
 				<div class="col-sm-6 col-md-8 board" id="onBoard">
-				<div>	</div>
+				<div class="garbage"><img src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-17-bin.png"></div>
 					<h3 id="draw"></h3>
 				</div>
 				<div class="col-sm-3 col-md-2 sidebar">
