--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 				<div class="row">
 					<div class="col-sm-3 col-md-2 sidebar">
 						<div class="input-sidebar"><h2 class="title">INPUT</h2></div>
-						<ul class="nav nav-sidebar">
-						
+						<ul class="nav nav-sidebar">						
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-232-sun.png"> Brightness</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-69-ruler.png"> Length</h4></li>
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-61-compass.png"> Compass</h4></li>
@@ -49,12 +48,15 @@
 							</button>
 						</div>
 					</div>
-				<div class="col-sm-6 col-md-8 board" id="onBoard">
-				<div id="center">
-				<div class="garbage"><img src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-17-bin.png"></div>
-					<h3 id="draw"></h3>
-				</div>
-				</div>
+					<div class="col-sm-6 col-md-8 board" id="onBoard">
+						<div id="center">
+							<div class="garbage"><img src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-17-bin.png"></div>
+							<h3 id="draw"></h3>
+							<div class="detail">
+								<h2 class="title">DETAIL</h2>
+							</div>
+						</div>
+					</div>
 				<div class="col-sm-3 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 class="title">OUTPUT</h2></div>
 					<ul class="nav nav-sidebar">
