--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							<li class="input item"><h4><img id="glyphicons" src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-23-fire.png"> Temperature</h4></li>
 						</ul>
 						<div class="process">
-							<button type="button" id="simulating" data-loading-text="Loading..." class="btn">
-								<h3>Simulating</h3>
+							<button type="button" id="simulate" data-loading-text="Loading..." class="btn">
+								<h3>Simulate</h3>
 							</button>
 						</div>
 					</div>
@@ -55,59 +55,10 @@
 							<h2 class="title"><label>DETAIL</label></h2>
 							<div class="detailContent">
 								<table>
-									<tr>
-										<th><label>| Brightness</label></th>
-										<td class="selector">
-											<select class="form-control input-lg">
-												<option value=""></option>
-                   				        		<option value="0">Daytime</option>
-                   				      			<option value="1">Midnight</option>
-                   				      			<option value="2">Night</option>
-                   				      			<option value="3">Laser</option>
-                   				      			<option value="4">LED</option>
-											</select>
-										</td>
-									</tr>
-									<tr>
-										<th><label>| Length</label></th>
-										<td class="selector">
-											<div class="input-group input-group-lg">
-											<input name="length" type="text" class="form-control">
-                        	    			<span class="input-group-addon">CM</span>
-                        	    			</div>
-										</td>
-									</tr>
+									
 								</table>
 							</div>
 						</div>
-						<!-- 
-						<div class="detail">
-							<span><h2 class="title">DETAIL</h2></span>
-							<div class="value">
-								<div class="row-fluid">
-                  					<div class="control-group span6">
-                  						<label for="">Brightness</label>
-               				   	 		<select name="light[type]" class="form-control input-lg">
-              				           	<option value=""></option>
-                   				        <option value="0">Daytime</option>
-                   				      	<option value="1">Midnight</option>
-                   				      	<option value="2">Night</option>
-                   				      	<option value="3">Laser</option>
-                   				      	<option value="4">LED</option>
-                       				</select>
-                       			</div>
-                   			</div>
-							<div class="row-fluid">								
-								<div class="control-group span6">
-									<label for="">Length</label>
-                  	    			<div class="input-group input-group-lg">
-                    	            	<input name="length" type="text" class="form-control">
-                        	    		<span class="input-group-addon">CM</span>
-                            		</div>
-                       			</div>
-               				</div>
-						</div>
-					</div> -->
 				</div>
 				<div class="col-sm-3 col-md-2 sidebar">
 					<div class="output-sidebar"><h2 class="title"><label>OUTPUT</label></h2></div>
