--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 						</div>
 					</div>
 					<div class="col-sm-8 col-md-8 board" id="onBoard">
+						<?php
+							echo "hello World!!";
+						?>
 						<div class="garbage"><img src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-17-bin.png"></div>
 						<h3 id="draw"></h3>
 						<div class="detail">
