--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 						</div>
 					</div>
 					<div class="col-sm-8 col-md-8 board" id="onBoard">
-						<?php
-							echo "hello World!!";
-						?>
+						
 						<div class="garbage"><img src="https://s3-ap-northeast-1.amazonaws.com/projectxinventor/resources/img/glyphicons-17-bin.png"></div>
 						<h3 id="draw"></h3>
 						<div class="detail">
 							<h2 class="title"><label>DETAIL</label></h2>
 							<div class="detailContent">
-								<table></table>
+								<table><?php
+							echo "hello World!!";
+								?></table>
 							</div>
 						</div>
 				</div>
