--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 						<div class="detail">
 							<h2 class="title"><label>DETAIL</label></h2>
 							<div class="detailContent">
-								<table><?php
-							echo ("hello World!!");
-								?></table>
+								<table>
+																
+								</table>
 							</div>
 						</div>
 				</div>
