--- a/simulate.html
+++ b/simulate.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="./assets/simulate.js"></script>
 <title>Insert title here</title>
 </head>
-<body onload="start()">	<!--  WebGL 컨텍스트를 초기화 하는 onload 이벤트 핸들러 지정 -->
+<body onload="start()">	<!--  WebGL 컨텍스트를 초기화 하는 onload 이벤트 핸들러 지정 //초기화 참조 https://developer.mozilla.org/ko/docs/Web/API/WebGL_API/Tutorial/Getting_started_with_WebGL -->
 	<h1>Simulating page.</h1>
   <canvas id="glcanvas" width="640" height="480">
     Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
